# aosp-core-adb

./: CMakeLists.txt  README.md
adb/: adb.cpp  adb.h  sysdeps.h  transport.cpp  transport.h
