CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(ADB)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED on)
#ADD_DEFINITIONS(-DADB_HOST)
ADD_DEFINITIONS(-DDEBUG_PACKETS=true)

SET(ADB_SRC ${CMAKE_CURRENT_SOURCE_DIR}/adb)
SET(ANDROID_BASE ${CMAKE_CURRENT_SOURCE_DIR}/base)
SET(LIB_CUTIL ${CMAKE_CURRENT_SOURCE_DIR}/libcutils)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${ADB_SRC})
INCLUDE_DIRECTORIES(${ANDROID_BASE}/include)
INCLUDE_DIRECTORIES(${LIB_CUTIL}/include)

AUX_SOURCE_DIRECTORY(${ANDROID_BASE} DIR_SRC)
AUX_SOURCE_DIRECTORY(${LIB_CUTIL} DIR_SRC)
AUX_SOURCE_DIRECTORY(${ADB_SRC} DIR_SRC)

#ADD_EXECUTABLE(adb ${ADB_SRC}/daemon/main.cpp)

ADD_LIBRARY(adb ${DIR_SRC})